<resources>
    <string name="app_name">Brew</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="you">You</string>
    <string name="add_drink">Add Drink</string>
    <string name="drink_name">Name</string>
    <string name="add_some_tags">Add some tags</string>
    <string name="add_a_name">Add a name</string>
    <string name="done">Done</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_image">Choose Image From</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="drink_form_empty_error">The glass may not be half empty, but this form sure is. Fill out at least one field</string>
    <string name="your_recent_drinks">Your recent drinks</string>
    <string name="view_all">View all</string>
    <string name="drink_transition_name">drink transition</string>
    <string name="tags">Tags</string>
    <string name="anonymous_disclaimer">You\'re using Brew anonymously.</string>
    <string name="login_or_signup">Login or sign up and we\'ll sync all the drinks you have taken note of.</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_login">Login</string>

    <!-- The following are acceptable in source control as the Facebook SDK usage is dependent on key-hashes -->
    <string name="facebook_application_id">160664014644023</string>
    <string name="fb_login_protocol_scheme">fb160664014644023</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="location_title">LOCATION</string>
    <string name="description_title">DESCRIPTION</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="tags_title">TAGS</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="what_are_you_drinking">What are you drinking?</string>
    <string name="add_a_description">Add a description</string>
    <string name="add_more">ADD MORE</string>
    <string name="recent_activity">Recent activity</string>
    <string name="profile_empty_title">This is looking pretty empty</string>
    <string name="profile_empty_description">You haven\'t been active on Brew yet. Have a look around, drink something nice, and your activity will turn up here</string>
    <string name="content_description_your_profile_image">Your profile image</string>
    <string name="app_settings">App settings</string>
    <string name="profile_settings">Profile settings</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="log_out_dialog_message">We\'ll keep your drinks handy while you\'re gone</string>
    <string name="button_continue">Continue</string>
    <string name="logged_out_local_delete_message">It looks like you\'re not logged in. This will permanently delete your drinks</string>
    <string name="logged_in_local_delete_message">We\'ll keep your drinks safe in the cloud</string>
    <string name="clear_local_drinks">Clear local drinks</string>
    <string name="about_brew">About Brew</string>
    <string name="who_helped_out">Who helped out</string>
    <string name="thanks_header_description">Throughout the development of Brew we\'ve been lucky enough to have contributions from a number of people in different areas. These contributions are greatly appreciated, as without them Brew would not be what it is today. Here\'s everyone</string>
    <string name="design_contributions">Design Contributors</string>
    <string name="design_thanks_description">The design found in the Brew app is a key part of what makes Brew feel the way it does. A number of icons have been sources from The Noun Project. The makers of these icons may not be aware they contributed to Brew, but should be recognised anyway</string>
    <string name="code_contributors">Code contributors</string>
    <string name="code_thanks_description">Brew needed to be build, and being an open source project garners contributions from anyone who\'s interested. Here\'s to them</string>
    <string name="test_contributors">Testing contributors</string>
    <string name="test_thanks_description">Brew wouldn\'t be anywhere near usable without testers. They\'ve helped to find bugs before they\'re released, and help to keep the experience of using Brew as smooth as possible</string>
    <string name="thanks">Thanks</string>
    <string name="sync_local">Brew Sync Settings</string>
    <string name="sync_settings">Sync Settings</string>
    <string name="timing_settings">Timing settings</string>
    <string name="public_by_default">Public Drinks by default</string>
    <string name="sync_settings_header">How we sync your drink data is entirely up to you. You can choose exactly how much information you want to sync, and how often we do it</string>
    <string name="content_settings">Content settings</string>
    <string name="content_settings_header">These settings allow you to choose what information is saved to the cloud</string>
    <string name="sync_your_drinks">Sync your drinks</string>
    <string name="timing_setting_description">These settings allow you to choose when we sync your information</string>
    <string name="sync_over_4g">Sync over 4G</string>
    <string name="sync_immediately">Sync as soon as you log a drink</string>
    <string name="sync_now">Sync now</string>
    <string name="your_recent_activity">Your recent activity</string>
    <string name="temp_empty_state_description">This version of the Brew app lets you keep track of the things you\'ve been drinking. Try clicking the add drink button 🍻</string>
    <string name="welcome_to_brew">Welcome to Brew</string>
    <string name="sync_drinks">Sync your drinks</string>
    <string name="sync_drinks_question">It looks like you\'re logging in with drinks which haven\'t been synced. Sync them now?</string>
    <string name="later">Later</string>
</resources>
