<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/material_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/addPictureButton"
        app:layout_constraintEnd_toStartOf="@+id/addPictureButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addPictureButton"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/descriptionTextInputLayout"
            android:hint="@string/what_are_you_drinking" />

        <requestFocus/>
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:id="@+id/addPictureButton"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_accent_ripple"
        android:orientation="vertical"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photoIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

            <TextView
                android:id="@+id/takePictureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_picture"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <ImageView
            android:id="@+id/pictureImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"/>

    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/descriptionTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPictureButton"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/chipsInputLayout"
            android:hint="@string/add_a_description" />
    </android.support.design.widget.TextInputLayout>

    <com.tylersuehr.chips.ChipsInputLayout
        android:id="@+id/chipsInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:chipBackgroundColor="@color/colorAccent"
        app:chipDeletable="true"
        app:chipDeleteIconColor="@color/material_black"
        app:chipHasAvatarIcon="false"
        app:customChipsEnabled="true"
        app:detailedChipsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_some_tags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextInputLayout" />

    <Button
        android:id="@+id/okButton"
        style="@android:style/Widget.Material.Light.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_ok"
        android:textColor="@color/colorAccentDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipsInputLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addMoreButton"
        style="@android:style/Widget.Material.Light.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_more"
        android:textColor="@color/colorAccentDark"
        app:layout_constraintBottom_toBottomOf="@+id/okButton"
        app:layout_constraintEnd_toStartOf="@+id/okButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/okButton"
        app:layout_constraintVertical_bias="0.5" />

</android.support.constraint.ConstraintLayout>